@@ -25,6 +25,7 @@ Bugfixes:
  - Qt: Fix potential crash if a gamepad causes focus to change
  - GBA Memory: Allow SRAM to be 64kB
  - Qt: Fix controller axis querying
+ - GBA Memory: Improve Thumb open bus behavior
 Misc:
  - Qt: Show multiplayer numbers in window title
 
